--- a/package.json
+++ b/package.json
@@ -7,8 +7,17 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.5",
+    "@mui/styled-engine-sc": "^5.11.0",
+    "bootstrap": "^5.2.3",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-bootstrap": "^2.7.0",
+    "react-dom": "^17.0.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.0",
